Adds localization to tag widget, annotation list filter and color coding panel

--- a/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
+++ b/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
@@ -33,7 +33,7 @@
 }
 
 .anno-sidepanel.annotation-list .annotation-list-filter label {
-  margin-right: 0.5em;
+  margin-right: 0.5ch;
 }
 
 .anno-sidepanel.annotation-list .annotation-list-filter button {
