--- a/src/components/Annotation/TagsWidget/TagInput/TagInput.css
+++ b/src/components/Annotation/TagsWidget/TagInput/TagInput.css
@@ -1,6 +1,3 @@
-form.annotation-tag-input-form {
-  display: inline;
-}
 
 form.annotation-tag-input-form input {
   background-color: transparent;
@@ -14,4 +11,44 @@ form.annotation-tag-input-form input {
 form.annotation-tag-input-form input:focus {
   background-color: var(--gray-300);
   box-shadow: none;
+}
+
+.tag-autocomplete {
+  display:inline;
+  position:relative;
+}
+
+.tag-autocomplete input {
+  outline:none;
+  border:none;
+  width:80px;
+  height:100%;
+  line-height:14px;
+  white-space:pre;
+  box-sizing:border-box;
+  background-color:transparent;
+  font-size:14px;
+}
+
+.tag-autocomplete ul {
+  position:absolute;
+  margin:0;
+  padding:0;
+  list-style-type:none;
+  background-color:#fff;
+  border-radius:3px;
+  border:1px solid #d6d7d9;
+  box-sizing:border-box;
+  box-shadow:0 0 20px rgba(0,0,0,0.25);
+}
+
+.tag-autocomplete ul:empty {
+  display:none;
+}
+
+.tag-autocomplete li {
+  box-sizing:border-box;
+  padding:2px 12px;
+  width:100%;
+  cursor:pointer;
 }
