--- a/src/components/Annotation/TagsWidget/TagInput/TagInput.css
+++ b/src/components/Annotation/TagsWidget/TagInput/TagInput.css
@@ -24,6 +24,9 @@
   box-shadow: 0 0 20px rgba(0,0,0,0.25);
   list-style-type: none;
   margin: 0;
+  max-height: 200px;
+  min-width: 180px;
+  overflow-y: auto;
   padding: 0;
   position: absolute;
   z-index: 9999;
