--- a/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
+++ b/src/components/AnnotationDesktop/AnnotationList/AnnotationList.css
@@ -4,7 +4,7 @@
   scroll-padding: 20px;
 }
 
-.anno-sidepanel.annotation-list ul {
+.anno-sidepanel.annotation-list > ul {
   height: 100%;
   list-style-type: none;  
   margin: 0;
