Fixes a minor regression + adds missing i18n labels to document cards in assignment details

--- a/src/pages/[lang]/projects/[project]/assignments/index.astro
+++ b/src/pages/[lang]/projects/[project]/assignments/index.astro
@@ -38,7 +38,7 @@ const i18n = getTranslations(Astro.request, 'project-assignments');
 ---
 <ProjectLayout active="Assignments" user={profile.data} project={project.data}>
   <ProjectAssignments
-    client:load
+    client:only
     i18n={i18n}
     me={profile.data}
     project={project.data}
