--- a/src/apps/project-assignment-details/AssignmentDetails.css
+++ b/src/apps/project-assignment-details/AssignmentDetails.css
@@ -3,6 +3,13 @@
   width: 100%;
 }
 
+.project-assignment-details .project-assignment-description {
+  color: var(--font-light);
+  font-size: var(--font-small);
+  max-width: 60ch;
+  white-space: pre-line;
+}
+
 .project-assignment-details .project-assignment-team ul {
   display: flex;
   list-style-type: none;
