Annotation view routing

--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -1,6 +1,7 @@
-.content-wrapper {
+.content-wrapper.text {
   display: flex;
   justify-content: center;
+  min-height: 100vh;
 }
 
 .content-wrapper main {
