Work in progress

--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -21,6 +21,14 @@
 
 .content-wrapper.text main {
   white-space: pre-line;
+
+  /** PDF **/
+  width: 90%;
+  background-color: transparent;
+}
+
+.a9s-popup {
+  z-index: 999;
 }
 
 .content-wrapper.text main p.plaintext {
@@ -29,6 +37,10 @@
 
 .content-wrapper main img {
   max-width: 100%;
+}
+
+.ta-desktop {
+  z-index: 9999;
 }
 
 .ta-desktop .presence-stack {
