--- a/src/components/AnnotationDesktop/DocumentMenu/DocumentMenu.css
+++ b/src/components/AnnotationDesktop/DocumentMenu/DocumentMenu.css
@@ -47,10 +47,41 @@
   width: 36px;
 }
 
+.document-menu .pdf-scale-controls {
+  align-items: center;
+  display: flex;
+}
+
+.document-menu .pdf-scale-controls button.select-trigger {
+  border-radius: var(--border-radius);
+  width: auto;
+  min-width: 90px;
+  padding: 0 0.8em;
+}
+
+.document-menu .pdf-scale-controls .custom-scale > span:first-child {
+  color: transparent;
+}
+
+.document-menu .pdf-scale-controls .custom-scale > span:last-child {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
 .document-menu button svg {
   color: var(--font-dark);
 }
 
 .document-menu :is(button, a.button) + :is(button, a.button) {
   margin-left: 0;
+}
+
+.pdf-scale-selector {
+  z-index: 9999;
 }
