--- a/src/pages/[lang]/sign-in.astro
+++ b/src/pages/[lang]/sign-in.astro
@@ -1,17 +1,17 @@
 ---
-import LoginLayout from "@layouts/login/LoginLayout.astro";
-import { Login } from "@apps/auth-login";
-import { getTranslations } from "@i18n";
-import type { LoginMethod } from "../../Types";
-import config from "../../config.json";
+import LoginLayout from '@layouts/login/LoginLayout.astro';
+import { Login } from '@apps/auth-login';
+import { getTranslations } from '@i18n';
+import type { LoginMethod } from '../../Types';
+import config from '../../config.json';
 
 const methods = config.authentication.methods;
 ---
 
-<LoginLayout title='' i18n={getTranslations(Astro.request, "auth-login")}>
+<LoginLayout title='' i18n={getTranslations(Astro.request, 'auth-login')}>
   <div class='container'>
     <Login
-      i18n={getTranslations(Astro.request, "auth-login")}
+      i18n={getTranslations(Astro.request, 'auth-login')}
       methods={methods as LoginMethod[]}
       client:load
     />
