--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
-import { getLangFromUrl } from "@i18n";
+import { getLangFromUrl } from '@i18n';
 
-import "@themes/default/index.css";
+import '@themes/default/index.css';
 
 export interface Props {
   title: string;
@@ -21,18 +21,18 @@ const { title } = Astro.props;
   <body>
     <slot />
     <script>
-      window.onUsersnapLoad = function (api) {
+      window.onUsersnapLoad = function (api: any) {
         api.init();
         api.show(import.meta.env.PUBLIC_USERSNAP_PROJECT_API_KEY);
       };
 
-      var script = document.createElement("script");
+      var script = document.createElement('script');
       script.defer = 1;
       script.src = `https://widget.usersnap.com/global/load/${
         import.meta.env.PUBLIC_USERSNAP_GLOBAL_API_KEY
       }?onload=onUsersnapLoad`;
 
-      document.getElementsByTagName("head")[0].appendChild(script);
+      document.getElementsByTagName('head')[0].appendChild(script);
     </script>
   </body>
 </html>
