More refactoring + plumbing. Now to figure out what to update in the backend

--- a/src/apps/project-assignments/Wizard/Progress/Progress.css
+++ b/src/apps/project-assignments/Wizard/Progress/Progress.css
@@ -1,4 +1,4 @@
-.creating-assignment {
+.saving-assignment {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -9,11 +9,11 @@
   padding: 30px;
 }
 
-.creating-assignment .spinner {
+.saving-assignment .spinner {
   color: var(--bright-blue);
 }
 
-.creating-assignment p {
+.saving-assignment p {
   max-width: 50ch;
   text-align: center;
 }
