--- a/src/components/DocumentCard/DocumentCard.css
+++ b/src/components/DocumentCard/DocumentCard.css
@@ -4,13 +4,11 @@
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   position: relative;
-  transition: all .25s ease-in-out;
+  transition: all 0.25s ease-in-out;
 }
 
 .document-card:hover {
-  box-shadow:
-    0 0 0 1px rgba(0, 0, 0, 0.18),
-    0 2px 8px -2px rgba(0, 0, 0, 0.28);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.18), 0 2px 8px -2px rgba(0, 0, 0, 0.28);
 }
 
 .document-card-body {
@@ -32,7 +30,7 @@
   font-family: Inter;
   font-size: var(--font-small);
   margin: 0;
-  padding: 0.6em 0;  
+  padding: 0.6em 0;
   text-align: center;
 }
 
