--- a/src/themes/default/dialog/index.css
+++ b/src/themes/default/dialog/index.css
@@ -18,8 +18,7 @@
   animation: dialogEnter 150ms cubic-bezier(0.16, 1, 0.3, 1);
   background-color: white;
   border-radius: var(--border-radius);
-  box-shadow: 
-    hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
+  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
     hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
   position: fixed;
   top: 50%;
@@ -61,4 +60,20 @@
 .dialog-footer {
   display: flex;
   margin-top: 2.5em;
+}
+
+.dialog-content-doc-lib {
+  animation: dialogEnter 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  background-color: white;
+  border-radius: var(--border-radius);
+  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
+    hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1000px;
+  overflow-y: auto;
+  padding: 25px;
+  z-index: 9999;
 }
