--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -9,14 +9,13 @@ import { listMyProjectsExtended } from '@backend/helpers';
 const lang = getLangFromUrl(Astro.url);
 
 const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
-if (!supabase)
-  return Astro.redirect(`/${lang}/sign-in`);
+if (!supabase) return Astro.redirect(`/${lang}/sign-in`);
 
 const me = await getMyProfile(supabase);
 if (me.error || !me.data) {
   const path = Astro.url.protocol + '//' + Astro.url.host;
   const error = await fetch(`${path}/500`);
-  return new Response(error.body, { headers: error.headers, status: 500 }); 
+  return new Response(error.body, { headers: error.headers, status: 500 });
 }
 
 const projects = await listMyProjectsExtended(supabase);
@@ -26,17 +25,18 @@ const invitations = await listMyInvites(supabase);
 if (!projects.data || !invitations.data) {
   const path = Astro.url.protocol + '//' + Astro.url.host;
   const error = await fetch(`${path}/500`);
-  return new Response(error.body, { headers: error.headers, status: 500 }); 
+  return new Response(error.body, { headers: error.headers, status: 500 });
 }
 ---
-<BaseLayout title="Dashboard">
-  <div class="container">
-    <ProjectsHome 
+
+<BaseLayout title='Dashboard'>
+  <div class='container'>
+    <ProjectsHome
       client:only
       me={me.data}
-      projects={projects.data} 
+      projects={projects.data}
       invitations={invitations.data}
-      i18n={getTranslations(Astro.request, 'dashboard-projects')} />
-
+      i18n={getTranslations(Astro.request, 'dashboard-projects')}
+    />
   </div>
 </BaseLayout>
