--- a/src/components/AnnotationDesktop/DocumentNotesList/DocumentNotesList.css
+++ b/src/components/AnnotationDesktop/DocumentNotesList/DocumentNotesList.css
@@ -2,3 +2,9 @@
   overflow-y: auto;
   padding: 0 8px;
 }
+
+.anno-sidepanel.document-notes-list ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
