--- a/src/components/AnnotationDesktop/DocumentNotesList/DocumentNotesList.css
+++ b/src/components/AnnotationDesktop/DocumentNotesList/DocumentNotesList.css
@@ -1,10 +1,20 @@
 .anno-sidepanel.document-notes-list {
   overflow-y: auto;
-  padding: 0 8px;
+  padding: 0 12px 20px 8px;
 }
 
 .anno-sidepanel.document-notes-list ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+.anno-sidepanel.document-notes-list  .annotation-card:not(.private) {
+  background-color: #fff;
+}
+
+.anno-sidepanel.document-notes-list .annotation-card {
+  border: 1px solid var(--gray-300);
+  border-radius: 6px;
+  margin: 8px 0;
 }
