--- a/src/components/AnnotationDesktop/DocumentNotesList/DocumentNotesList.css
+++ b/src/components/AnnotationDesktop/DocumentNotesList/DocumentNotesList.css
@@ -9,12 +9,23 @@
   padding: 0;
 }
 
-.anno-sidepanel.document-notes-list  .annotation-card:not(.private) {
-  background-color: #fff;
+.anno-sidepanel.document-notes-list .annotation-card:not(.private) {
+  background-color: #fff9a8;
+  border-color: #ffee05;
+  box-shadow: 1px 2px 3px -1px rgba(0, 0, 0, 0.08);
 }
 
 .anno-sidepanel.document-notes-list .annotation-card {
   border: 1px solid var(--gray-300);
   border-radius: 6px;
   margin: 8px 0;
+}
+
+.anno-sidepanel.document-notes-list .annotation-tagswidget {
+  background-color: #fffbc7;
+  border-color: #ffee05;
+}
+
+.anno-sidepanel.document-notes-list .annotation-tagswidget input::placeholder {
+  color: #9f891e;
 }
