--- a/src/apps/dashboard-projects/Header/Header.css
+++ b/src/apps/dashboard-projects/Header/Header.css
@@ -49,6 +49,11 @@
   width: auto;
 }
 
+.dashboard-header section.dashboard-header-bottom .dashboard-header-bottom-actions {
+  align-items: center;
+  display: flex;
+}
+
 .dashboard-header section.dashboard-header-bottom {
   padding: 6px 25px 0 30px;
   border-bottom: 1px solid var(--gray-200);
