--- a/src/pages/[lang]/sign-in.astro
+++ b/src/pages/[lang]/sign-in.astro
@@ -8,7 +8,7 @@ import config from '../../config.json';
 const methods = config.authentication.methods;
 ---
 
-<LoginLayout title='' i18n={getTranslations(Astro.request, 'auth-login')}>
+<LoginLayout title=''>
   <div class='container'>
     <Login
       i18n={getTranslations(Astro.request, 'auth-login')}
