--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -5,6 +5,7 @@ import { getMyProfile, listMyInvites } from '@backend/crud';
 import { ProjectsHome } from '@apps/dashboard-projects';
 import { listMyProjectsExtended } from '@backend/helpers';
 import HeaderLayout from '@layouts/HeaderLayout.astro';
+import config from '../../../config.json';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -27,16 +28,16 @@ if (!projects.data || !invitations.data) {
   const error = await fetch(`${path}/500`);
   return new Response(error.body, { headers: error.headers, status: 500 });
 }
+
+const message = config.branding.footer_message;
 ---
 
-<HeaderLayout title='Dashboard'>
-  <div class='container'>
-    <ProjectsHome
-      client:only
-      me={me.data}
-      projects={projects.data}
-      invitations={invitations.data}
-      i18n={getTranslations(Astro.request, 'dashboard-projects')}
-    />
-  </div>
+<HeaderLayout title='Dashboard' message={message}>
+  <ProjectsHome
+    client:only
+    me={me.data}
+    projects={projects.data}
+    invitations={invitations.data}
+    i18n={getTranslations(Astro.request, 'dashboard-projects')}
+  />
 </HeaderLayout>
