--- a/src/pages/[lang]/sign-in.astro
+++ b/src/pages/[lang]/sign-in.astro
@@ -24,15 +24,9 @@ const methods = config.authentication.methods;
     bottom: 0;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     position: absolute;
     top: 0;
-    width: 100%;
-  }
-
-  .column {
-    max-width: 360px;
-    padding: 0 20px;
-    position: relative;
     width: 100%;
   }
 </style>
