--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -10,7 +10,7 @@
 .anno-desktop-left {
   left: 0;
   position: absolute;
-  top: 50px;
+  top: 0;
   z-index: 2;
 }
 
@@ -19,14 +19,14 @@
   flex-direction: row;
   position: absolute;
   right: 0;
-  top: 50px;
+  top: 0;
   bottom: 0;
   pointer-events: none;
   z-index: 2;
 }
 
 .anno-desktop-bottom {
-  bottom: 50px;
+  bottom: 0;
   display: flex;
   justify-content: center;
   left: 0;
